change settings to only update with enter + fix carat jumping to end

--- a/app/src/components/ServerDetails.scss
+++ b/app/src/components/ServerDetails.scss
@@ -81,6 +81,11 @@
   .settings {
     grid-area: LEFT;
 
+    .dirty {
+      font-weight: bolder;
+      text-transform: uppercase;
+    }
+
     input, select {
       @include minimal-input;
 
